@@ -16,8 +16,8 @@
 
 package org.bremersee.http.codec.xml.model;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import org.bremersee.xml.JaxbContextData;
 import org.bremersee.xml.JaxbContextDataProvider;
 
@@ -30,15 +30,12 @@ public class XmlTestJaxbContextDataProvider implements JaxbContextDataProvider {
 
   @Override
   public Collection<JaxbContextData> getJaxbContextData() {
-    return Arrays.asList(
-        // new JaxbContextData(ObjectFactory.class.getPackage()),
+    return List.of(
         new JaxbContextData(
             org.bremersee.http.codec.xml.model.xml2.ObjectFactory.class.getPackage(),
             "http://bremersee.github.io/xmlschemas/common-xml-test-model-2.xsd"),
         new JaxbContextData(
-            org.bremersee.http.codec.xml.model.xml3.ObjectFactory.class.getPackage().getName(),
-            null,
-            null),
+            org.bremersee.http.codec.xml.model.xml3.ObjectFactory.class.getPackage()),
         new JaxbContextData(
             org.bremersee.http.codec.xml.model.xml4.ObjectFactory.class.getPackage())
     );
